@@ -870,7 +870,7 @@ convert_to_integer (tree type, tree expr)
 				DECL_ATTRIBUTES (current_function_decl)))
 	{
 	  expr = save_expr (expr);
-	  tree check = ubsan_instrument_float_cast (loc, type, expr);
+	  tree check = ubsan_instrument_float_cast (loc, type, expr, expr);
 	  expr = build1 (FIX_TRUNC_EXPR, type, expr);
 	  if (check == NULL)
 	    return expr;
