@@ -1,3 +1,9 @@
+2015-01-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR sanitizer/64344
+	* c-c++-common/ubsan/pr64344-1.c: New test.
+	* c-c++-common/ubsan/pr64344-2.c: New test.
+
 2015-01-08  Christian Bruel  <christian.bruel@st.com>
 
 	PR target/64507
