@@ -1,3 +1,12 @@
+2015-01-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR sanitizer/64344
+	* ubsan.h (ubsan_instrument_float_cast): Add ARG argument.
+	* ubsan.c (ubsan_instrument_float_cast): Add ARG argument, pass
+	it to libubsan handler instead of EXPR.  Fold comparisons earlier,
+	if the result is integer_zerop, return NULL_TREE.
+	* convert.c (convert_to_integer): Pass expr as ARG.
+
 2015-01-08  Christian Bruel  <christian.bruel@st.com>
 
 	PR target/64507
